<resources>
    <string name="app_name">PubCrawler</string>
    <string name="title_activity_find_pub">find_pub</string>
    <string name="title_activity_login">PubCrawler</string>
    <string name="facebook_app_id">1125139577523442</string>
    <string name="LOGIN_PREFS">edu.uw.tacoma.jwolf059.webserviceslab.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="userid_hint">Enter your userid</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="pwdVer_hint">Re-enter your password</string>
    <string name="register_text">REGISTER</string>
    <string name="title_activity_maps">Pub Locator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pub_details">Pub Details</string>
    <string name="Random_Instructions">Select a name for the Crawl, the starting location, number of stops, and if you desire food at the halfway point. Then click create crawl and PubCrawler will randomly select pubs creating a pub crawl that you and your friends will enjoy.</string>
    <string name="Select_Crawl">Select a name for the Crawl and select up to 6 locations. Once the crawl is created you can share it with your friends.</string>
    <string name="start_pub">Select starting location:</string>
    <string name="num_stop">Select number of Pubs in the Crawl:</string>
    <string name="random_crawl_title">Create Random Crawl</string>
    <string name="food_at">Do you want food at the middle stop?</string>
    <string name="edit_name">Enter the name for the Crawl</string>
    <string name="random_button">Create Random Crawl</string>
    <string name="create_crawl_button">Create A Crawl</string>
    <string name="activity_pub_crawl_map">Pub Crawl Map</string>
    <string name="create_crawl_title">Create A Crawl</string>
    <string name="select_pub">Select up to 6 locaitons</string>
    <string name="map_view">Map View</string>
    <string name="pub_name">PUB_NAME</string>
    <string name="pub_rating">PUB_RATING</string>
    <string name="pub_web_link">PUB_WEB_LINK</string>
    <string name="pub_isOpen">PUB_IS_OPEN</string>
    <string name="pub_hours">PUB_HOURS</string>
    <string name="web_link"><a>www.google.com</a></string>
    <string name="google_app_id">AIzaSyCEn4Fhg1PNkBk30X-tffOtNzTiPZCh58k</string>

</resources>
