<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_random_crawl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/port"
    android:orientation="vertical"
    tools:context="edu.uw.tacoma.jwolf059.pubcrawler.OptionScreens.RandomCrawlActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:text="@string/random_crawl_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/cardview_light_background" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="22dp"
                android:text="@string/edit_name"
                android:textColor="@color/cardview_light_background"
                android:textColorHint="@color/cardview_light_background" />

            <EditText
                android:id="@+id/crawl_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:ems="10"
                android:hint="Enter Crawl Name"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/cardview_light_background"
                android:textColorHint="@color/cardview_light_background" />


            <TextView
                android:id="@+id/Select_Start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="22dp"
                android:text="@string/start_pub"
                android:textColor="@color/cardview_light_background" />

            <Spinner
                android:id="@+id/pub_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/Select_Start"
                android:layout_marginTop="19dp"
                android:background="@color/cardview_light_background" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="26dp"
                android:text="@string/num_stop"
                android:textColor="@color/cardview_light_background" />

            <Spinner
                android:id="@+id/number_pubs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="24dp"
                android:background="@color/cardview_light_background"
                android:textColor="@color/colorPrimary" />


            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/number_pubs"
                android:layout_marginTop="20dp"
                android:text="@string/food_at"
                android:textColor="@color/cardview_light_background" />

            <Button
                android:id="@+id/create_crawl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="Create Crawl"
                android:textColor="#F7F7F5" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
